--- a/index.html
+++ b/index.html
@@ -1370,7 +1370,7 @@
                         <a href="#contact" class="btn btn-primary">
                             <i class="fas fa-envelope"></i> Get In Touch
                         </a>
-                        <a href="#projects" class="btn btn-outline">View Projects</a>
+                        <a href="Pritish_Mehta_Resume.pdf" class="btn btn-outline">Download Resume</a>
                     </div>
                     <div class="social-links">
                         <a href="https://github.com/pritishmehta" target="_blank" class="social-link">
@@ -1410,11 +1410,6 @@
                     <p class="about-text">
                         I'm passionate about finding patterns in complex datasets and translating them into strategic business insights. My background in both financial auditing and energy operations gives me a unique perspective on data governance, compliance, and operational efficiency.
                     </p>
-                    <div class="about-links">
-                        <a href="Pritish_Mehta_Resume.pdf" class="btn btn-primary">
-                            <i class="fas fa-file-alt"></i> Download Resume
-                        </a>
-                    </div>
                 </div>
                 <div class="about-img-container" data-aos="fade-left">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" alt="Data Analytics" class="about-img">
