--- a/index.html
+++ b/index.html
@@ -1672,7 +1672,7 @@
                         </div>
                         <div class="contact-text">
                             <h4>Email</h4>
-                            <a href="mailto:pitishmehta18@gmail.com">pitishmehta18@gmail.com</a>
+                            <a href="mailto:pitishmehta18@gmail.com">pritishmehta18@gmail.com</a>
                         </div>
                     </div>
                     <div class="contact-item">
